pam assets , ttride country specific search, hezz rtl issue

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-fr/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-fr/strings.xml
@@ -1212,7 +1212,7 @@ I accept
 
 <string name="report_issue">RAPPORTER LES PROBLÈMES DE PRIX</string>
 
-<string name="id"></string>
+<string name="id">ID</string>
 
 <string name="fair_complaint">Réclamation tarifaire</string>
 
@@ -1735,5 +1735,6 @@ de Hezz. S\'il vous plaît n\'allez pas plus loin, si cela ne va pas avec vous.
  <string name="facebook_not_installed">L'application Facebook n'est pas activée</string>
  <string name="please_enter_your_name">S'il vous plaît entrez votre nom</string>
  <string name="select_vehicle_type">Sélectionnez le type de véhicule</string>
-
+ <string name="by_signing_you_agree">En vous inscrivant, vous acceptez notre <u>termes et conditions</u></string>
+ <string name="continue_text">Continuer</string>
 </resources>																									
