--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-fr/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-fr/strings.xml
@@ -1737,4 +1737,5 @@ de Hezz. S\'il vous plaît n\'allez pas plus loin, si cela ne va pas avec vous.
  <string name="select_vehicle_type">Sélectionnez le type de véhicule</string>
  <string name="by_signing_you_agree">En vous inscrivant, vous acceptez notre</string>
  <string name="continue_text">Continuer</string>
+    <string name="neft_pending">Neft Pending</string>
 </resources>																									
