--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1026,6 +1026,7 @@
     <string name="error_no_cities_found">No Cities Found!</string>
     <string name="title_dialog_select_city">Select City</string>
     <string name="title_search_dialog_default">Select</string>
+    <string name="neft_pending">Neft Pending</string>
 
 
 </resources>
