stripe_integration: stripe cards module added

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1028,4 +1028,21 @@
     <string name="title_search_dialog_default">Select</string>
 
 
+    <string name="hint_card_number">CARD NUMBER</string>
+    <string name="hint_date">MM/YY</string>
+    <string name="hint_cvv">CVV</string>
+    <string name="add_card_title">ADD CARD</string>
+    <string name="edit_card_title">EDIT CARD</string>
+    <string name="stripe_delete_card">Are you sure you want to delete your card ending with %s?</string>
+    <string name="stripe_add_card_error">%s is not valid.</string>
+    <string name="card_number">Card Number</string>
+    <string name="expiry_date">Expiry Date</string>
+    <string name="cvc">CVC</string>
+    <string name="save">Save</string>
+    <string name="title_view_card">VIEW CARD</string>
+    <string name="title_add_card">ADD CARD</string>
+    <string name="delete">Delete</string>
+    <string name="bullet">\u2022</string>
+
+
 </resources>
