--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1013,6 +1013,7 @@
     <string name="rate_us_on_play_store">Rate us on Play Store</string>
     <string name="like_us_on_facebook">Like us on Facebook</string>
     <string name="terms_and_conditions">Terms and Conditions</string>
+    <string name="terms_of_use">Terms of Use</string>
     <string name="privacy_policy">Privacy Policy</string>
     <string name="who_are_we">Who are we?</string>
     <string name="facebook_not_installed">Facebook app not enabled</string>
@@ -1027,6 +1028,8 @@
     <string name="title_dialog_select_city">Select City</string>
     <string name="title_search_dialog_default">Select</string>
     <string name="neft_pending">Neft Pending</string>
+    <string name="terms_of_schedule">Terms of Schedule</string>
+    <string name="faqs">FAQs</string>
 
 
 </resources>
