feat_vehicle_model: UI & api done

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1045,6 +1045,12 @@
     <string name="bullet">\u2022</string>
     <string name="card_details">Card Details</string>
     <string name="view_cards">View Cards</string>
+    <string name="year">Year</string>
+    <string name="make">Make</string>
+    <string name="model">Model</string>
+    <string name="number_of_doors">Number of Doors</string>
+    <string name="color">Color</string>
+    <string name="no_of_seat_belts">Number of seatbelts</string>
 
 
 </resources>
