wl_dev: waze toggle

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1030,6 +1030,7 @@
     <string name="neft_pending">Neft Pending</string>
     <string name="terms_of_schedule">Terms of Schedule</string>
     <string name="faqs">FAQs</string>
+    <string name="waze_navigation">Waze Navigation</string>
 
 
 </resources>
