--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -129,9 +129,9 @@
     <string name="customer_pickup_text">A pickup has been assigned to you. Please pick the customer.</string>
     <string name="start_ride_text">Please confirm you have picked up customer : %s</string>
 
-    <string name="battery_level_text">Battery Level must be greater than 20% to accept the ride. Plugin to a power source to continue.</string>
-    <string name="battery_level_start_text">Battery Level must be greater than 10% to start the ride. Plugin to a power source to continue.</string>
-    <string name="battery_level_arrived_text">Battery Level must be greater than 10% to to mark the ride arrived. Plugin to a power source to continue.</string>
+    <string name="battery_level_text">Battery level must be greater than 20% to accept the ride. Please plugin to a power source to continue.</string>
+    <string name="battery_level_start_text">Battery level must be greater than 10% to start the ride. Please plugin to a power source to continue.</string>
+    <string name="battery_level_arrived_text">Battery level must be greater than 10% to to mark the ride arrived. Please plugin to a power source to continue.</string>
     <string name="back">Back</string>
 
     <string name="change_phone_no_text">Changed Phone number is same as the previous one.</string>
@@ -1047,6 +1047,7 @@
 
     <string name="notification_channel_default">Notifications</string>
     <string name="notification_channel_description_default">Latest Updates</string>
+    <string name="driver_agreement">Driver Agreement</string>
 
 
     <string name="hint_card_number">CARD NUMBER</string>
