--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1080,6 +1080,7 @@
     <string name="permissions_location">Location</string>
     <string name="permissions_phone">Phone identity</string>
     <string name="grant_permission">Grant Permission</string>
+    <string name="no_payment_methods_available">No payment methods available as yet.</string>
 
 
 </resources>
