f_wallet_transaction_fixes: Wallet transactions api from new Wallet screen changed to credit history api

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1081,6 +1081,7 @@
     <string name="permissions_phone">Phone identity</string>
     <string name="grant_permission">Grant Permission</string>
     <string name="no_payment_methods_available">No payment methods available as yet.</string>
+    <string name="debt">Debt</string>
 
 
 </resources>
