--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1083,6 +1083,7 @@
     <string name="no_payment_methods_available">No payment methods available as yet.</string>
     <string name="debt">Debt</string>
     <string name="ringtone_full_volume">Ringtone Full Volume on Incoming Request</string>
+    <string name="settings">Settings</string>
 
 
 </resources>
