--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1085,7 +1085,7 @@
     <string name="ringtone_full_volume">Ringtone Full Volume on Incoming Request</string>
     <string name="settings">Settings</string>
     <string name="year">Year</string>
-    <string name="hing_year">Enter Year</string>
+    <string name="hint_year">Enter Year</string>
     <string name="make">Make</string>
     <string name="hint_make">Select Make</string>
     <string name="model">Model</string>
@@ -1096,6 +1096,7 @@
     <string name="select_model">Select Model</string>
     <string name="select_color">Select Color</string>
     <string name="invalid_year_error">Year should be betweeen %d and %d</string>
+    <string name="invalid_vehicle_number">Please enter a valid vehicle number.</string>
     <string name="invalid_make">Please select a vehicle make to proceed.</string>
     <string name="invalid_model">Please select a vehicle model to proceed.</string>
     <string name="invalid_color">Please select a color.</string>
@@ -1104,6 +1105,7 @@
     <string name="title_vehicle_details">Vehicle Information</string>
     <string name="select_doors">Select Doors</string>
     <string name="select_seatbelts">Select Seat Belts</string>
+    <string name="enter_vehicle_number">Enter Vehicle Number</string>
 
 
 </resources>
