--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1101,6 +1101,9 @@
     <string name="invalid_color">Please select a color.</string>
     <string name="title_vehicle_details">Vehicle Information</string>
     <string name="ride_is_complete">Ride is complete</string>
+    <string name="add_luaggage">Add Luggage</string>
+    <string name="luggage_count">Luggage Count</string>
+    <string name="text_luggage_charges">Fare per Baggage: %s</string>
 
 
 </resources>
