--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1104,6 +1104,7 @@
     <string name="add_luaggage">Add Luggage</string>
     <string name="luggage_count">Luggage Count</string>
     <string name="text_luggage_charges">Fare per Baggage: %s</string>
+    <string name="add_luggage">Add Luggage</string>
 
 
 </resources>
