--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1105,6 +1105,8 @@
     <string name="luggage_count">Luggage Count</string>
     <string name="text_luggage_charges">Fare per Baggage: %s</string>
     <string name="add_luggage">Add Luggage</string>
+    <string name="luggage_info_home_screen">Luggage Charges (%d): %s</string>
+    <string name="change_u"><u>CHANGE</u></string>
 
 
 </resources>
