--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1116,6 +1116,7 @@
     <string name="tip">Tip</string>
     <string name="toll_charges">Toll Charges</string>
     <string name="discount">Discount</string>
+    <string name="documents">Documents</string>
 
 
 </resources>
