--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1117,6 +1117,7 @@
     <string name="toll_charges">Toll Charges</string>
     <string name="discount">Discount</string>
     <string name="documents">Documents</string>
+    <string name="drop_location_updated">Drop location updated</string>
 
 
 </resources>
