nickel ride:-profile_monthly_earnings_text added

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1119,5 +1119,5 @@
     <string name="documents">Documents</string>
     <string name="drop_location_updated">Drop location updated</string>
 
-
+    <string name="monthly_text_tips">Tips</string>
 </resources>
