feat_doc_fields: checks handled

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1120,4 +1120,6 @@
     <string name="drop_location_updated">Drop location updated</string>
 
     <string name="monthly_text_tips">Tips</string>
+    <string name="document_details">Document Details</string>
+    <string name="add_images_label">Add Images</string>
 </resources>
