--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1120,4 +1120,5 @@
     <string name="drop_location_updated">Drop location updated</string>
 
     <string name="monthly_text_tips">Tips</string>
+    <string name="drop_location_updated_by_customer">Drop location updated by customer</string>
 </resources>
