--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1122,4 +1122,5 @@
     <string name="monthly_text_tips">Tips</string>
     <string name="document_details">Document Details</string>
     <string name="add_images_label">Add Images</string>
+    <string name="upload_images_error">Please upload images before submitting.</string>
 </resources>
