f_edit_rate_card: edit rate cards ui, api, zoom hardcoding along with server keys

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-fr/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-fr/strings.xml
@@ -1054,7 +1054,7 @@
 
     <string name="distance_per_km">\n(Par Kilomètre)</string>
 
-    <string name="time_per_min">Temps\n(Par minute)</string>
+    <string name="time_per_min">Temps (Par minute)</string>
 
     <string name="per_min">(par minute)</string>
 
