--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1133,4 +1133,6 @@
     <string name="drop_location_updated_by_customer">Drop location updated by customer</string>
 
     <string name="btn_text_continue">Continue</string>
+    <string name="leaderboard">Leaderboard</string>
+    <string name="call_driver">Call Driver</string>
 </resources>
