f_driver_email: driver email input in signup and editable in profile

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1135,4 +1135,6 @@
     <string name="btn_text_continue">Continue</string>
     <string name="leaderboard">Leaderboard</string>
     <string name="call_driver">Call Driver</string>
+    <string name="email_optional">Email (optional)</string>
+    <string name="please_enter_valid_email">Please enter valid email id</string>
 </resources>
