wl_dev: restart phone message corrected

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -178,7 +178,7 @@
     <string name="luggage_charge">Luggage Charge</string>
     <string name="login">Login</string>
 
-    <string name="restart_phone">Please Restart Your Phone</string>
+    <string name="restart_phone">Your device location is not updating, Please Restart Your Phone</string>
     <string name="min_fare">Min Fare</string>
     <string name="meals_on">Meals ON</string>
     <string name="mail_us">MAIL US</string>
