--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1137,4 +1137,5 @@
     <string name="call_driver">Call Driver</string>
     <string name="email_optional">Email (optional)</string>
     <string name="please_enter_valid_email">Please enter valid email id</string>
+    <string name="nothing_changed">Nothing changed</string>
 </resources>
