wl_dev: edit profile bug fixes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1140,4 +1140,6 @@
     <string name="nothing_changed">Nothing changed</string>
     <string name="first_name">First Name</string>
     <string name="last_name">Last Name</string>
+    <string name="first_name_required">First name is mandatory</string>
+
 </resources>
