--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
@@ -45,6 +45,7 @@
     <string name="select_language">ଭାଷା ଚୟନ କରନ୍ତୁ</string>
     <string name="enter_phone_number"> ଫୋନ୍ ନମ୍ବର୍ ଲେଖନ୍ତୁ</string>
     <string name="rides">ରାଇଡ୍ ଗୁଡ଼ିକ</string>
+    <string name="ride">ରାଇଡ୍ ଗୁଡ଼ିକ</string>
     <string name="no_rides_currently">ବର୍ତମାନ୍ କୋଉଣସି ରାଇଡ୍ ନାହି</string>
     <string name="missed">ଛାଡ଼ିଛନ୍ତି</string>
     <string name="no_missed_rides_currently">ବର୍ତମାନ୍ କୌଣଷି ରାଇଡ୍ ଛାଡ଼ିନାହନ୍ତି</string>
@@ -652,6 +653,7 @@
     <string name="bid">Bid</string>
     <string name="bid_placed">Bid Placed</string>
     <string name="number_should_not_start_with_zero">Phone number should not start with 0</string>
+    <string name="pickup_time_format">Pickup time: %s</string>
     <!--Strings for Subscription plans-->
 
 
