--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -49,6 +49,7 @@
     <string name="from">మూలం</string>
     <string name="to">గమ్యం</string>
     <string name="rides">రైడ్స్</string>
+    <string name="ride">రైడ్స్</string>
     <string name="no_rides_currently">ప్రస్తుతం సవారీలు లేవు.</string>
     <string name="missed">మిస్డ్ సవారీలు</string>
     <string name="no_missed_rides_currently">ప్రస్తుతం మిస్స్డ్ రైడ్స్ లేవు</string>
@@ -673,8 +674,7 @@
     <string name="bid">Bid</string>
     <string name="bid_placed">Bid Placed</string>
     <string name="number_should_not_start_with_zero">Phone number should not start with 0</string>
-
-
+    <string name="pickup_time_format">Pickup time: %s</string>
 
 
 </resources>
